# ray-tracer-challenge-cpp

./: .gitignore  CMakeLists.txt  README.md  clock.ppm  erssindisilProjectsray-tracer-challengebuildtestsDebugtests.exe  simple_spheres.ppm  sphere.ppm
apps/: CMakeLists.txt  clock.cpp  plot_projectile.cpp  projectile.cpp  raytracer.cpp  silhouette.cpp  simple_spheres.cpp  sphere.cpp
include/: camera.h  canvas.h  color.h  intersections.h  lights.h  materials.h  matrix.h  plane.h  primitives.h  ray.h  shape.h  shapes.h  sphere.h  transformations.h  world.h
src/: CMakeLists.txt  camera.cpp  canvas.cpp  canvas.h  clock.cpp  color.cpp  intersections.cpp  materials.cpp  matrix.h  plot_projectile.cpp  point.cpp  point.h  primatives.cpp  primatives.h  primitives.cpp  primitives.h  projectile.cpp  projectile_main.cpp  ray.cpp  ray.h  shape.cpp  shapes.cpp  sphere.cpp  sphere.h  vec3.h  vector.cpp  vector.h  world.cpp
tests/: CMakeLists.txt  test_camera.cpp  test_canvas.cpp  test_color.cpp  test_lights.cpp  test_materials.cpp  test_matrix.cpp  test_plane.cpp  test_primatives.cpp  test_primitives.cpp  test_ray.cpp  test_shape.cpp  test_shapes.cpp  test_sphere.cpp  test_transformations.cpp  test_world.cpp
